rnsc/test_data/rns_integration/error/parser/class_header/missing_class_name_recovers.rns
.class ; class name is missing

unknown_token ; <- still reported